--- a/assets/css/stebin milton.css
+++ b/assets/css/stebin milton.css
@@ -13,6 +13,19 @@
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 */
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i&display=swap");
+
+.circle {
+  height: 24px;
+  width: 24px;
+  border-radius: 24px;
+  background-color: black;
+  position: fixed; 
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  z-index: 1; /* so that it stays on top of all other elements */
+}
+/* arrow cursor effect */
 .lan {
   color: black;
 }
